fixed typos and checkjob function.

--- a/Setup_and_Config/sim_opt.conf
+++ b/Setup_and_Config/sim_opt.conf
@@ -19,7 +19,7 @@
 ##############################################################################
 
 structure            ../../InputFiles/example.psf
-coordinates          ../../InputFiles/example.pdb
+coordinates          cccc../../InputFiles/example.pdb
 outputName           generic_optimization
 
 firsttimestep        0
