cleaning up files

--- a/Setup_and_Config/sim_production.conf
+++ b/Setup_and_Config/sim_production.conf
@@ -27,7 +27,7 @@ set Temp  	     310
 # temperature 	     $Temp  ;# <- note: temperature not needed when using 
 #                                       restart files. 
                         
-set NumberSteps      2500000	;#  multiply by time step to get block time. 
+set NumberSteps      150000	;#  multiply by time step to get block time. 
 #                                #  ie) 2500000 x 2fs  = 5 nanoseconds
 
 ## - reading in restart files from previous simulations: ---------------------
