--- a/Setup_and_Config/sbatch_start.template
+++ b/Setup_and_Config/sbatch_start.template
@@ -37,6 +37,11 @@ srun  --ntasks-per-node $ntpn  namd2 +ppn $ppn $optimize_script >TempOutputFile.
 # python script to cleanup and redirect data. 
 python postjob_processing.py $SLURM_JOBID -optimize
 
+# prevent job from running if pausejob is present
+if [ -f pausejob ]; then
+ exit
+fi
+
 # launch next phase: 
 sbatch sbatch_production
 #--------------------------------------------------------------------------------
