--- a/Setup_and_Config/sim_opt.conf
+++ b/Setup_and_Config/sim_opt.conf
@@ -20,7 +20,12 @@
 
 structure            ../../InputFiles/example.psf
 coordinates          ../../InputFiles/example.pdb
-outputName           generic_optimization
+
+# OutputName is a generic name for moving files.
+outputName           current_MD_run_files 
+
+
+
 
 firsttimestep        0
 set Temp  	     310
@@ -35,11 +40,12 @@ temperature 	     $Temp
 
 paraTypeCharmm	on
 parameters  	../../InputFiles/Parameters/par_all27_prot_na.prm
-#parameters  	../../InputFiles/Parameters/par_all36_prot.prm
-#parameters  	../../InputFiles/Parameters/par_all36_na.prm
-#parameters  	../../InputFiles/Parameters/par_all36_lipid.prm
-#parameters  	../../InputFiles/Parameters/par_all36_carb.prm
-#parameters  	../../InputFiles/Parameters/par_all36_water_ions.prm
+
+# parameters  	../../InputFiles/Parameters/par_all36_prot.prm
+# parameters  	../../InputFiles/Parameters/par_all36_na.prm
+# parameters  	../../InputFiles/Parameters/par_all36_lipid.prm
+# parameters  	../../InputFiles/Parameters/par_all36_carb.prm
+# parameters  	../../InputFiles/Parameters/par_all36_water_ions.prm
 
 ## Additional constraints: --------------------------------------------------
 #  -can use this section to constrain various parts of the simulation, -for 
@@ -47,30 +53,30 @@ parameters  	../../InputFiles/Parameters/par_all27_prot_na.prm
 #  - make sure to assign a non-zero values to the B column of the pdb file an uncomment the 
 #  appropriate section.
 
-#constraints         on 
-#consexp             2
-#consref             ../../InputFiles/change_me.pdb
-#conskfile           ../../InputFiles/change_me.pdb
-#conskcol            B
-#constraintScaling   0.5
+# constraints         on 
+# consexp             2
+# consref             ../../InputFiles/change_me.pdb
+# conskfile           ../../InputFiles/change_me.pdb
+# conskcol            B
+# constraintScaling   0.5
 
-#fixedAtoms          on
-#fixedAtomsFile      ../../InputFiles/change_me.pdb 
-#fixedAtomsCol       B
+# fixedAtoms          on
+# fixedAtomsFile      ../../InputFiles/change_me.pdb 
+# fixedAtomsCol       B
 
 ## Example of interactive molecular dynamics: (Uncommment next 4 lines) 
-#IMDon on 
-#IMDport 5678
-#IMDfreq 10
-#IMDwait no
+# IMDon on 
+# IMDport 5678
+# IMDfreq 10
+# IMDwait no
 
 ## Example of using colvars:  (make sure to include colvars.in file!) 
-#colvars on
-#colvarsConfig ../../InputFiles/colvars.in
+# colvars on
+# colvarsConfig ../../InputFiles/colvars.in
 
 ## Example using extrabonds file: (make sure to include extrabonds.txt file!) 
-#extraBonds on
-#extraBondsFile  ../../InputFiles/extrabonds.txt
+# extraBonds on
+# extraBondsFile  ../../InputFiles/extrabonds.txt
 
 ## parameter settings:-------------------------------------------------------
 # Force-Field Parameters
