--- a/Setup_and_Config/namd_production_script.conf
+++ b/Setup_and_Config/namd_production_script.conf
@@ -21,7 +21,7 @@
 
 structure            ../../InputFiles/example.psf
 coordinates          ../../InputFiles/example.pdb
-outputName           generic_restartfile
+outputName           current_MD_run_files
 
 set Temp  	     310
 # temperature 	     $Temp  ;# <- note: temperature not needed when using 
@@ -32,7 +32,7 @@ set NumberSteps      10000	;#  multiply by time step to get block time.
 
 ## - reading in restart files from previous simulations: ---------------------
 
-set inputname      generic_restartfile
+set inputname      current_MD_run_files
                    
 binCoordinates     $inputname.coor  ;# Coordinates from last run (binary)
 binVelocities      $inputname.vel   ;# Velocities from last run (binary)
