--- a/Setup_and_Config/sbatch_production_script.template
+++ b/Setup_and_Config/sbatch_production_script.template
@@ -43,7 +43,7 @@ if [ -f pausejob ]; then
 fi
 
 # launch next phase: 
-# sbatch sbatch_production  <--- leave off for now. 
+ sbatch sbatch_production_script 
 
 
 
