Minor changes, testing gitless

--- a/BUILD_DIR/packmol_config_file.cfg
+++ b/BUILD_DIR/packmol_config_file.cfg
@@ -2,9 +2,9 @@
 # a mixture of metabolites
 #
 
-# All the atoms from diferent molecules will be separated at least 2.0
-# Anstroms at the solution.
-# usage:   packmol < packmol_config_file.cfg 
+# All the atoms from different molecules will be separated at least 2.0
+# Angstroms at the solution.
+# usage:   packmol < packmol_config_file.cfg
 
 tolerance 4.0
 
@@ -18,24 +18,24 @@ output mixture.pdb
 
 #
 
-structure model_neuram_tet_x.pdb 
-  number 1 
+structure model_neuram_tet_x.pdb
+  number 1
   fixed 0. 0. 0. 0. 0. 0
 end structure
 
 
-structure ZMR_model.pdb 
-  number 6 
+structure ZMR_model.pdb
+  number 6
   inside box -54 -36 -54  54 36 54
 end structure
 
-structure glu.pdb 
+structure glu.pdb
   number 20
   inside box -54 -36 -54  54 36 54
 end structure
 
 structure glutathione.pdb 
-  number 3 
+  number 3
   inside box -54 -36 -54  54 36 54
 end structure
 
@@ -48,6 +48,3 @@ structure magnesium.pdb
   number 20
   inside box -54 -36 -54  54 36 54
 end structure
-
-
-
