--- a/Setup_and_Config/sbatch_production_script.template
+++ b/Setup_and_Config/sbatch_production_script.template
@@ -24,22 +24,23 @@ module load python-fe/2.7.3  # python module file
 
 #--------------------------------------------------------------------------------
 # python script for preprocessing data
-
- python prejob_processing.py $SLURM_JOBID -production
+if [ -f prejob_processing.py ]; 
+ then python prejob_processing.py $SLURM_JOBID -production;
+ else echo "No processing script" > pausejob
+fi 
 
 # prevent job from running if pausejob is present
-
-if [ -f pausejob ]; then
- exit
-fi
+if [ -f pausejob ]; then exit; fi
 
 # run optimization job.
  srun  --ntasks-per-node $ntpn  namd2 +ppn $ppn $production_script >temp_working_outputfile.out 2>temp_working_errorsfile.err;
 
 # --------------------------------------------------------------------------------------------
 # python script for postprocessing data
-
- python postjob_processing.py $SLURM_JOBID -production
+if [ -f postjob_processing.py ]; 
+ then python postjob_processing.py $SLURM_JOBID -production;
+ else echo "No processing script" > pausejob
+fi
 
 # prevent job from running if pausejob is present
 if [ -f pausejob ]; then
