--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -24,26 +24,28 @@ module load X			# namd module file
 module load python-fe/2.7.3	# python module file
 
 ## python script to initiate job and setup variables.-----------
+## pause if preprocessing script is not present. 
 
- python prejob_processing.py $SLURM_JOBID -optimize
+if [ -f prejob_processing.py ];
+ then python prejob_processing.py $SLURM_JOBID -optimize;
+ else echo "No processing script" > pausejob;
+fi
 
 ## prevent job from running if pausejob is present
-if [ -f pausejob ]; then
- exit
-fi
+if [ -f pausejob ]; then exit; fi
 
 # submit job to the cluster:------------------------------------
 
  srun  --ntasks-per-node $ntpn  namd2 +ppn $ppn $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
 
 ## python script to cleanup and redirect data-------------------- 
-
- python postjob_processing.py $SLURM_JOBID -optimize
+if [ -f postjob_processing.py ];
+ then python postjob_processing.py $SLURM_JOBID -optimize;
+ else echo "No processing script" > pausejob;
+fi
 
 ## prevent job from running if pausejob is present
-if [ -f pausejob ]; then
- exit
-fi
+if [ -f pausejob ]; then exit; fi
 
 # launch next job segment:------------------------------------------------------
 
