Updated  benchmarking functionality.

--- a/Setup_and_Config/Benchmarking/namd_equilibration_script.conf
+++ b/Setup_and_Config/Benchmarking/namd_equilibration_script.conf
@@ -3,26 +3,13 @@
 ######################################################################
 # Generic equilibration NAMD script             M.Kuiper Dec 2014
 #
-#-this is an example NAMD configuration file designed for the 
-# equilibration of a molecular system to be invoked from the 
-# "sbatch_start" script.  At the completion of the equilibration 
-# run the sbatch script will call "sbatch_production" which will 
-# then execute the production script.   
-# More details in README_namd.txt
-#
-##############################################################################
-## Input Parameters:                                            
-##  - adjust the "change_me" to point to your pdb and psf files in InputFiles/            
-##  - also adjust the cell dimensions to match your simulation under the  
-##    "Periodic Boundary Conditions"  section
-##  - adjust settings under "Constant Pressure Control" for your simulation.
 ##############################################################################
 
 structure            ../../InputFiles/example.psf
 coordinates          ../../InputFiles/example.pdb
 
 # OutputName is a generic name for moving files.
-outputName           current_MD_run_files 
+outputName           bm_input
 
 firsttimestep        0
 set Temp  	     310
@@ -36,9 +23,9 @@ temperature 	     $Temp
 ##  -make sure to use the right parameter set!
 
 paraTypeCharmm	on
-#parameters  	../../InputFiles/Parameters/par_all27_prot_na.prm
+parameters  	../../InputFiles/Parameters/par_all27_prot_na.prm
 
- parameters  	../../InputFiles/Parameters/par_all36_prot.prm
+# parameters  	../../InputFiles/Parameters/par_all36_prot.prm
 # parameters  	../../InputFiles/Parameters/par_all36_na.prm
 # parameters  	../../InputFiles/Parameters/par_all36_lipid.prm
 # parameters  	../../InputFiles/Parameters/par_all36_carb.prm
