--- a/Setup_and_Config/Benchmarking/generic_benchmark.conf
+++ b/Setup_and_Config/Benchmarking/generic_benchmark.conf
@@ -2,69 +2,43 @@
 ## Namd configuration file.
 ##############################################################################
 #
-# Generic production NAMD script                         m.kuiper aug 2012
-#
-#- this is an example configuration file designed for production runs
-#  of a molecular system from a previously equilibrated simulation.
-#  Output from this simulation will be handled by "sbatch_production"
-#  and moved to the appropriate directory.
-#  More details in README_namd.txt
-#
-##############################################################################
-## Input Parameters:
-##  - adjust the "change_me" to point to your pdb and psf files in InputFiles/
-##  - also adjust the cell dimensions to match your simulation under the
-##    "Periodic Boundary Conditions"  section
-##  - adjust settings under "Constant Pressure Control" for your simulation.
-##############################################################################
-
+# Generic benchmark NAMD script                         MK  Jan 2106
+#  this is just a short run to get timing data started from restart files. 
 
 structure            ../../InputFiles/example.psf
 coordinates          ../../InputFiles/example.pdb
 outputName           current_MD_run_files
 
-set Temp  	         310
+set Temp  	       310
 # temperature 	     $Temp    ;# <- note: temperature not needed when using
-#                                       restart files.
 
-set NumberSteps       20000	;#  multiply by time step to get block time.
-#                              #  ie) 2500000 x 2fs  = 5 nanoseconds
+set NumberSteps       5000    ;# relatively short run.
 
 ## - reading in restart files from previous simulations: ---------------------
 
-set inputname      current_MD_run_files
-
+set inputname      bm_input
 binCoordinates     $inputname.coor  ;# Coordinates from last run (binary)
 binVelocities      $inputname.vel   ;# Velocities from last run (binary)
 extendedSystem     $inputname.xsc   ;# Cell dimensions from last run
 firsttimestep                 0     ;# Last step of previous run
 numsteps           $NumberSteps     ;# Run stops when this step is reached
 
-
 ##############################################################################
 ## Simulation Parameters:
 ##############################################################################
-
 ## Parameters ----------------------------------------------------------------
 ##  -make sure to use the right parameter set!
 
 paraTypeCharmm	on
-#parameters      ../../InputFiles/Parameters/par_all27_prot_na.prm
+parameters      ../../InputFiles/Parameters/par_all27_prot_na.prm
 
-parameters     ../../InputFiles/Parameters/par_all36_prot.prm
+#parameters     ../../InputFiles/Parameters/par_all36_prot.prm
 #parameters     ../../InputFiles/Parameters/par_all36_na.prm
 #parameters     ../../InputFiles/Parameters/par_all36_lipid.prm
 #parameters     ../../InputFiles/Parameters/par_all36_carb.prm
 #parameters     ../../InputFiles/Parameters/par_all36_water_ions.prm
 
-
-
 ## Additional constraints: --------------------------------------------------
-#   -can use this section to constrain various parts of the simulation, -for
-#   example protein backbone, with either harmonic constraints or fixed atoms.
-#   - make sure to assign a non-zero values to the B column of the pdb file an uncomment the
-#   appropriate section.
-
 # constraints         on
 #consexp             2
 #consref             ../../InputFiles/change_me.pdb
@@ -143,11 +117,11 @@ langevinPistonTemp    $Temp
 
 ## Output settings: -----------------------------------------------------------
 
-restartfreq         250000
+restartfreq         10000
 dcdfreq             10000
-xstFreq             10000
-outputEnergies      10000
-outputPressure      10000
-outputTiming        10000
+xstFreq             500
+outputEnergies      500
+outputPressure      500
+outputTiming        500
 
 ##
