general cleanup, - better 'erase data' function. a

--- a/Setup_and_Config/Benchmarking/Templates/generic_benchmark.conf
+++ b/Setup_and_Config/Benchmarking/Templates/generic_benchmark.conf
@@ -2,8 +2,8 @@
 ## Namd configuration file.
 ##############################################################################
 #
-# Generic benchmark NAMD script                         MK  Jan 2106
-#  this is just a short run to get timing data started from restart files. 
+# Generic benchmark NAMD script                         MK     Mar 2017
+# this is just a short run to get timing data started from restart files. 
 
 structure            ../../InputFiles/example.psf
 coordinates          ../../InputFiles/example.pdb
@@ -14,8 +14,9 @@ set Temp  	       310
 
 set NumberSteps       5000    ;# relatively short run.
 
-## - reading in restart files from previous simulations: ---------------------
 
+
+## - reading in restart files from previous simulations: ---------------------
 set inputname      bm_input
 binCoordinates     $inputname.coor  ;# Coordinates from last run (binary)
 binVelocities      $inputname.vel   ;# Velocities from last run (binary)
@@ -38,34 +39,7 @@ parameters      ../../InputFiles/Parameters/par_all27_prot_na.prm
 #parameters     ../../InputFiles/Parameters/par_all36_carb.prm
 #parameters     ../../InputFiles/Parameters/par_all36_water_ions.prm
 
-## Additional constraints: --------------------------------------------------
-# constraints         on
-#consexp             2
-#consref             ../../InputFiles/change_me.pdb
-#conskfile           ../../InputFiles/change_me.pdb
-#conskcol            B
-#constraintScaling   0.5
-
-#fixedAtoms          on
-#fixedAtomsFile      ../../InputFiles/change_me.pdb
-#fixedAtomsCol       B
-
-## Example of interactive molecular dynamics: (Uncommment next 4 lines)
-
-#IMDon on
-#IMDport 5678
-#IMDfreq 10
-#IMDwait no
-
-## Example of using colvars:  (make sure to include colvars.in file!)
-#colvars on
-#colvarsConfig ../../InputFiles/colvars.in
-
-## Example using extrabonds file: (make sure to include extrabonds.txt file!)
-#extraBonds on
-#extraBondsFile  ../../InputFiles/extrabonds.txt
-
-## parameter settings:-------------------------------------------------------
+## Parameter settings:-------------------------------------------------------
 #Force-Field Parameters
 exclude        	scaled1-4
 1-4scaling    	1.0
@@ -87,10 +61,9 @@ langevinDamping     5
 langevinTemp        $Temp
 langevinHydrogen    off
 
-##  Periodic Boundary Conditions: ----------------------------------------------
+## Periodic Boundary Conditions: ----------------------------------------------
 
 # pbc not needed if using restart files!
-
 # cellBasisVector1    96.      0.      0.
 # cellBasisVector2     0.     96.      0.
 # cellBasisVector3     0.      0.     96.
@@ -99,12 +72,10 @@ wrapAll             on
 wrapWater           on
 
 ## PME (for full-system periodic electrostatics) -------------------------------
-
 PME                 yes
 PMEGridSpacing      1.0
 
 ## Constant Pressure Control (variable volume) ---------------------------------
-
 useGroupPressure      no
 useFlexibleCell       no
 useConstantArea       no
