--- a/Setup_and_Config/sbatch_production_script.template
+++ b/Setup_and_Config/sbatch_production_script.template
@@ -1,7 +1,6 @@
 #!/bin/bash
-##  sbatch launching script template                May 2014  MKuiper
+##  sbatch launching script template                Sept 2017  MKuiper
 ## -A generic script to launch a series of production namd runs
-## on the Avoca bluegene cluster at vlsci. 
 #--------------------------------------------------------------- 
 #         Make all changes in "master_config_file"             #
 #     -you shouldn't have to change anything in here!          #
@@ -12,14 +11,27 @@
 
 #SBATCH --nodes=X
 #SBATCH --time=X
-#SBATCH --account=X
+#SBATCH --tasks-per-node=X
+#SBATCH --gres gpu:X
 
 production_script=X
 
-module load X                # module file:
-module load python-gcc/3.6.0 # python module file
+module load openmpi
+module load X                # module file
 
-#--------------------------------------------------------------------------------
+NNODE=$SLURM_JOB_NUM_NODES
+NTASKS=$SLURM_NTASKS_PER_NODE
+
+# calculate total processes (P) and processes per node (PPN) (for multinode jobs) 
+PPN=`expr $SLURM_NTASK_PER_NODE - 1`
+P="$(($PPN * $SLURM_NNODES))"
+
+GPUS="+idlepoll +devices $CUDA_VISIBLE_DEVICES" 
+
+
+
+
+#--------------------------------------------------------------------------------------------
 # python script for preprocessing data
 if [ -f prejob_processing.py ]; 
  then python3 prejob_processing.py $SLURM_JOBID -production;
@@ -29,10 +41,13 @@ fi
 # prevent job from running if pausejob is present
 if [ -f pausejob ]; then exit; fi
 
-# run optimization job.
- srun namd2 $production_script >temp_working_outputfile.out 2>temp_working_errorsfile.err;
+# run production job:
+if [ $NNODES == 1 ]; then
+  namd2 +ppn $NTASKS $GPUS  $production_script >temp_working_outputfile.out 2>temp_working_errorsfile.err;
+fi 
 
-# --------------------------------------------------------------------------------------------
+
+#--------------------------------------------------------------------------------------------
 # python script for postprocessing data
 if [ -f postjob_processing.py ]; 
  then python3 postjob_processing.py $SLURM_JOBID -production;
@@ -44,6 +59,7 @@ if [ -f pausejob ]; then
  exit
 fi
 
-# launch next phase: 
- sbatch sbatch_production_script 
+# launch next job: 
+ 
+sbatch sbatch_production_script 
 
