--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -1,5 +1,5 @@
 #!/bin/bash
-##  sbatch launching script template                Jan 2015  MKuiper
+##  sbatch launching script template                Sept  2017  MKuiper
 ## -A generic script to launch a series of production namd runs
 ## on the Avoca bluegene cluster at vlsci. 
 #--------------------------------------------------------------- 
@@ -13,13 +13,26 @@
 
 #SBATCH --nodes=X
 #SBATCH --time=X
-#SBATCH --account=X
+#SBATCH --tasks-per-node=X
+#SBATCH --gres gpu:X
 
 optimize_script=X      
 
+module load openmpi
 module load X			# namd module file
-module load python-gcc/3.6.0 	# python module file
 
+NNODE=$SLURM_JOB_NUM_NODES
+NTASKS=$SLURM_NTASKS_PER_NODE
+
+# calculate total processes (P) and processes per node (PPN)(for multiple node jobs) 
+PPN=`expr $SLURM_NTASKS_PER_NODE -1`
+P="$(($PPN * $SLURM_NODES))"
+
+GPUS="+idlepoll +devices $CUDA_VISIBLE_DEVICES"
+
+
+
+#--------------------------------------------------------------------------------
 ## python script to initiate job and setup variables.-----------
 ## pause if preprocessing script is not present. 
 
@@ -35,7 +48,12 @@ if [ -f pausejob ]; then exit; fi
 
 # submit job to the cluster:------------------------------------
 
- srun namd2 $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
+if [ $NNODE == 1]; then
+ namd2 +ppn $NTASKS $GPUS $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
+fi
+
+
+#--------------------------------------------------------------------------------
 
 ## python script to cleanup and redirect data-------------------- 
 if [ -f postjob_processing.py ];
