--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -25,8 +25,8 @@ NNODE=$SLURM_JOB_NUM_NODES
 NTASKS=$SLURM_NTASKS_PER_NODE
 
 # calculate total processes (P) and processes per node (PPN)(for multiple node jobs) 
-PPN=`expr $SLURM_NTASKS_PER_NODE -1`
-P="$(($PPN * $SLURM_NODES))"
+# PPN=`expr $SLURM_NTASKS_PER_NODE -1`
+# P="$(($PPN * $SLURM_NODES))"
 
 GPUS="+idlepoll +devices $CUDA_VISIBLE_DEVICES"
 
@@ -48,7 +48,7 @@ if [ -f pausejob ]; then exit; fi
 
 # submit job to the cluster:------------------------------------
 
-if [ $NNODE == 1]; then
+if [ $NNODE == 1 ]; then
  namd2 +ppn $NTASKS $GPUS $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
 fi
 
