--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -36,9 +36,9 @@ GPUS="+idlepoll +devices $CUDA_VISIBLE_DEVICES"
 ## python script to initiate job and setup variables.-----------
 ## pause if preprocessing script is not present. 
 
-if [ -f prejob_processing.py ];
+if [ -f ../prejob_processing.py ];
  then 
-      python3 prejob_processing.py $SLURM_JOBID -optimize;
+      python3 ../prejob_processing.py $SLURM_JOBID -optimize;
  else 
       echo "No processing script" > pausejob;
 fi
@@ -49,16 +49,16 @@ if [ -f pausejob ]; then exit; fi
 # submit job to the cluster:------------------------------------
 
 if [ $NNODE == 1 ]; then
- namd2 +ppn $NTASKS $GPUS $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
+ namd2 +ppn $NTASKS $GPUS ../$optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
 fi
 
 
 #--------------------------------------------------------------------------------
 
 ## python script to cleanup and redirect data-------------------- 
-if [ -f postjob_processing.py ];
+if [ -f ../postjob_processing.py ];
  then 
-      python3 postjob_processing.py $SLURM_JOBID -optimize;
+      python3 ../postjob_processing.py $SLURM_JOBID -optimize;
  else 
       echo "No processing script" > pausejob;
 fi
