--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -28,7 +28,7 @@ NTASKS=$SLURM_NTASKS_PER_NODE
 # PPN=`expr $SLURM_NTASKS_PER_NODE -1`
 # P="$(($PPN * $SLURM_NODES))"
 
-GPUS="+devices $CUDA_VISIBLE_DEVICES"
+GPUS="+idlepoll +devices $CUDA_VISIBLE_DEVICES"
 echo "cuda devices: $CUDA_VISBLE_DEVICES" > cuda.info
 
 # update current working scripts from above directory
