Fixed recover function. v2

--- a/Setup_and_Config/namd_equilibration_script.conf
+++ b/Setup_and_Config/namd_equilibration_script.conf
@@ -34,6 +34,7 @@ temperature 	     $Temp
 
 ## Parameters ----------------------------------------------------------------
 paraTypeCharmm	on
+parameters  	../../InputFiles/Parameters/par_all27_prot_na.prm
 parameters  	../../InputFiles/Parameters/par_all36_prot.prm
 parameters  	../../InputFiles/Parameters/par_all36_na.prm
 parameters  	../../InputFiles/Parameters/par_all36_lipid.prm
