--- a/Setup_and_Config/namd_production_script.conf
+++ b/Setup_and_Config/namd_production_script.conf
@@ -47,6 +47,7 @@ numsteps           $NumberSteps     ;# Run stops when this step is reached
 
 ## Parameters ----------------------------------------------------------------
 paraTypeCharmm	on
+parameters     ../../InputFiles/Parameters/par_all27_prot_na.prm
 parameters     ../../InputFiles/Parameters/par_all36_prot.prm
 parameters     ../../InputFiles/Parameters/par_all36_na.prm
 parameters     ../../InputFiles/Parameters/par_all36_lipid.prm
