--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -28,7 +28,7 @@ NTASKS=$SLURM_NTASKS_PER_NODE
 # PPN=`expr $SLURM_NTASKS_PER_NODE -1`
 # P="$(($PPN * $SLURM_NODES))"
 
-GPUS=" +idlepoll +devices $CUDA_VISIBLE_DEVICES"
+GPUS=" +idlepoll "
 
 echo "cuda devices" > cuda.info
 echo $CUDA_VISIBLE_DEVICES >> cuda.info
@@ -58,12 +58,13 @@ if [ -f pausejob ]; then exit; fi
 if [ $NNODE == 1 ]; then
 
 namd2 +ppn $NTASKS $GPUS $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
-#namd2 +ppn $NTASKS +idlepoll +devices 0 $optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
 
 fi
-
-
 #--------------------------------------------------------------------------------
+# record average timing numbers from namd output (from days/ns converted to ns/day)
+nsday=`less temp_working_outputfile.out |grep CPUs | tail -n 3 | awk '{ sum += $8; } END { if (NR > 0) print NR/sum; } '`
+ddate=`date +%d/%b/%Y`
+echo $ddate " JobId:" $SLURM_JOBID "  NodeList:" $SLURM_JOB_NODELIST " cpus:" $NTASKS " GpuList:" $CUDA_VISIBLE_DEVICES " ns/day:" $nsday >> timing.info
 
 ## python script to cleanup and redirect data-------------------- 
 if [ -f ../postjob_processing.py ];
