cleaned up example files and job structure.

--- a/Setup_and_Config/namd_equilibration_script.conf
+++ b/Setup_and_Config/namd_equilibration_script.conf
@@ -12,7 +12,7 @@
 #
 ##############################################################################
 ## Input Parameters:                                            
-##  - adjust the "change_me" to point to your pdb and psf files in InputFil../../            
+##  - adjust the "change_me" to point to your pdb and psf files in InputFil../../../            
 ##  - also adjust the cell dimensions to match your simulation under the  
 ##    "Periodic Boundary Conditions"  section
 ##  - adjust settings under "Constant Pressure Control" for your simulation.
@@ -80,9 +80,10 @@ cutoff        	12
 switching     	on
 switchdist     	10
 pairlistdist   	14
+# margin        2
 
 # Integrator Parameters
-timestep            2
+timestep            1
 rigidBonds          all
 nonbondedFreq       1
 fullElectFrequency  2  
