--- a/Setup_and_Config/namd_production_script.conf
+++ b/Setup_and_Config/namd_production_script.conf
@@ -12,7 +12,7 @@
 #
 ##############################################################################
 ## Input Parameters:
-##  - adjust the "change_me" to point to your pdb and psf files in InputFil../../
+##  - adjust the "change_me" to point to your pdb and psf files in InputFil../../../
 ##  - also adjust the cell dimensions to match your simulation under the
 ##    "Periodic Boundary Conditions"  section
 ##  - adjust settings under "Constant Pressure Control" for your simulation.
@@ -27,7 +27,7 @@ set Temp  	         310
 # temperature 	     $Temp    ;# <- note: temperature not needed when using
 #                                       restart files.
 
-set NumberSteps     1000000    ;#  multiply by time step to get block time.
+set NumberSteps     50000    ;#  multiply by time step to get block time.
 #                              #  ie) 2500000 x 2fs  = 5 nanoseconds
 
 ## - reading in restart files from previous simulations: ---------------------
@@ -47,12 +47,12 @@ numsteps           $NumberSteps     ;# Run stops when this step is reached
 
 ## Parameters ----------------------------------------------------------------
 paraTypeCharmm	on
-#parameters     ../../InputFiles/Parameters/par_all36_prot.prm
-#parameters     ../../InputFiles/Parameters/par_all36_na.prm
-#parameters     ../../InputFiles/Parameters/par_all36_lipid.prm
-#parameters     ../../InputFiles/Parameters/par_all36_carb.prm
-#parameters     ../../InputFiles/Parameters/par_all36_cgenff.prm
-#parameters     ../../InputFiles/Parameters/par_all36_water_ions.prm
+parameters     ../../InputFiles/Parameters/par_all36_prot.prm
+parameters     ../../InputFiles/Parameters/par_all36_na.prm
+parameters     ../../InputFiles/Parameters/par_all36_lipid.prm
+parameters     ../../InputFiles/Parameters/par_all36_carb.prm
+parameters     ../../InputFiles/Parameters/par_all36_cgenff.prm
+parameters     ../../InputFiles/Parameters/par_all36_water_ions.prm
 
 
 
@@ -141,10 +141,10 @@ langevinPistonTemp    $Temp
 ## Output settings: -----------------------------------------------------------
 
 restartfreq         500000
-dcdfreq             50000
-xstFreq             50000
-outputEnergies      50000
-outputPressure      50000
-outputTiming        50000
+dcdfreq             10000
+xstFreq             10000
+outputEnergies      10000
+outputPressure      10000
+outputTiming        10000
 
 ##
