--- a/Setup_and_Config/sbatch_start_script.template
+++ b/Setup_and_Config/sbatch_start_script.template
@@ -39,7 +39,7 @@ scontrol show job $SLURM_JOBID > scontrol.info
 
 # update current working scripts from above directory
 # cp ../*.py . 
-# cp ../namd* . 
+ cp ../namd* . 
 #--------------------------------------------------------------------------------
 ## python script to initiate job and setup variables.-----------
 ## pause if preprocessing script is not present. 
@@ -57,14 +57,14 @@ if [ -f pausejob ]; then exit; fi
 # submit job to the cluster:------------------------------------
 if [ $NNODE == 1 ]; then
 
-namd2 +ppn $NTASKS $GPUS ../$optimize_script >temp_working_outputfile.out 2> temp_working_errorsfile.err;
+ namd2 +ppn $NTASKS $GPUS $optimize_script > temp_working_outputfile.out 2> temp_working_errorsfile.err;
 
 fi
 #--------------------------------------------------------------------------------
 # record average timing numbers from namd output (from days/ns converted to ns/day)
-nsday=`less temp_working_outputfile.out |grep CPUs | tail -n 3 | awk '{ sum += $8; } END { if (NR > 0) print NR/sum; } '`
-ddate=`date +%d/%b/%Y`
-echo $ddate " JobId:" $SLURM_JOBID "  NodeList:" $SLURM_JOB_NODELIST " cpus:" $NTASKS " GpuList:" $CUDA_VISIBLE_DEVICES " ns/day:" $nsday >> timing.info
+ nsday=`less temp_working_outputfile.out |grep CPUs | tail -n 3 | awk '{ sum += $8; } END { if (NR > 0) print NR/sum; } '`
+ ddate=`date +%d/%b/%Y`
+ echo $ddate " JobId:" $SLURM_JOBID "  NodeList:" $SLURM_JOB_NODELIST " cpus:" $NTASKS " GpuList:" $CUDA_VISIBLE_DEVICES " ns/day:" $nsday >> timing.info
 
 ## python script to cleanup and redirect data-------------------- 
 if [ -f ../postjob_processing.py ];
