--- a/Setup_and_Config/namd_equilibration_script.conf
+++ b/Setup_and_Config/namd_equilibration_script.conf
@@ -41,6 +41,10 @@ parameters  	../../InputFiles/Parameters/par_all36_carb.prm
 parameters  	../../InputFiles/Parameters/par_all36_cgenff.prm
 parameters  	../../InputFiles/Parameters/par_all36_water_ions.prm
 
+#parameters     ../../InputFiles/Parameters/stream/carb/toppar_all36_carb_glycopeptide.str
+#parameters     ../../InputFiles/Parameters/stream/lipid/toppar_all36_cholesterol.str
+#parameters     ../../InputFiles/Parameters/stream/na/toppar_all36_na_nad_ppi.str
+
 ## Additional constraints: --------------------------------------------------
 #  -can use this section to constrain various parts of the simulation, -for 
 #  example protein backbone, with either harmonic constraints or fixed atoms.
@@ -112,7 +116,7 @@ PMEGridSpacing      1.0
 ## Constant Pressure Control (variable volume) ---------------------------------
 useGroupPressure      yes 
 useFlexibleCell       yes
-useConstantArea       no
+useConstantArea       yes
 
 langevinPiston        on
 langevinPistonTarget  1.01325
