--- a/Setup_and_Config/namd_production_script.conf
+++ b/Setup_and_Config/namd_production_script.conf
@@ -54,6 +54,10 @@ parameters     ../../InputFiles/Parameters/par_all36_carb.prm
 parameters     ../../InputFiles/Parameters/par_all36_cgenff.prm
 parameters     ../../InputFiles/Parameters/par_all36_water_ions.prm
 
+#parameters     ../../InputFiles/Parameters/stream/carb/toppar_all36_carb_glycopeptide.str
+#parameters     ../../InputFiles/Parameters/stream/lipid/toppar_all36_cholesterol.str
+#parameters     ../../InputFiles/Parameters/stream/na/toppar_all36_na_nad_ppi.str
+
 
 
 ## Additional constraints: --------------------------------------------------
