--- a/Setup_and_Config/sbatch_production_script.template
+++ b/Setup_and_Config/sbatch_production_script.template
@@ -63,8 +63,9 @@ fi
 #--------------------------------------------------------------------------------------------
 # Record average timing numbers from namd output (from days/ns converted to ns/day)  
 nsday=`less temp_working_outputfile.out |grep CPUs | tail -n 3 | awk '{ sum += $8; } END { if (NR > 0) print NR/sum; } '` 
+hours=`less temp_working_outputfile.out |grep CPUTime | awk '{ print $4/3600; } '` 
 ddate=`date +%d/%b/%Y`
-echo $ddate " JobId:" $SLURM_JOBID "  NodeList:" $SLURM_JOB_NODELIST " cpus:" $NTASKS " GpuList:" $CUDA_VISIBLE_DEVICES " ns/day:" $nsday >> timing.info
+echo $ddate " JobId:" $SLURM_JOBID "  NodeList:" $SLURM_JOB_NODELIST " cpus:" $NTASKS " GpuList:" $CUDA_VISIBLE_DEVICES " ns/day:" $nsday " Total hours:" $hours >> timing.info
 
 # Python script for postprocessing data
 if [ -f ../postjob_processing.py ]; 
