fixed typo in topology files.

--- a/Setup_and_Config/namd_equilibration_script.conf
+++ b/Setup_and_Config/namd_equilibration_script.conf
@@ -109,6 +109,12 @@ cellOrigin           0       0       0
 wrapAll             on
 wrapWater           on
 
+# for hexagonal PBC:
+# v1 ( r      0      0 ) 
+# v2 ( r/2   3*0.5*r/2   0 ) 
+# v3 ( 0      0      h ) 
+
+
 ## PME (for full-system periodic electrostatics) -------------------------------
 PME                 yes
 PMEGridSpacing      1.0 
